[gd_scene load_steps=18 format=3]

[ext_resource type="Script" path="res://src/presentation/world/World.gd" id="1"]
[ext_resource type="Script" path="res://src/presentation/world/BlueprintGrid.gd" id="2"]
[ext_resource type="PackedScene" path="res://src/presentation/scenes/Player.tscn" id="3"]
[ext_resource type="Script" path="res://src/presentation/ui/WeaponHud.gd" id="4"]
[ext_resource type="Script" path="res://src/domain/world/GameWorld.gd" id="5"]
[ext_resource type="Script" path="res://src/input/CommandQueue.gd" id="6"]
[ext_resource type="Script" path="res://src/input/HumanInputSource.gd" id="7"]
[ext_resource type="Script" path="res://src/input/AgentInputSource.gd" id="8"]
[ext_resource type="Script" path="res://src/infrastructure/agent/AgentBridge.gd" id="9"]
[ext_resource type="Script" path="res://src/infrastructure/agent/LocalAgentStub.gd" id="10"]
[ext_resource type="Script" path="res://src/infrastructure/network/LocalNetworkAdapter.gd" id="11"]
[ext_resource type="Script" path="res://src/presentation/ui/HudAnnouncement.gd" id="12"]
[ext_resource type="Script" path="res://src/presentation/world/ArenaBoundary.gd" id="13"]
[ext_resource type="Script" path="res://src/presentation/ui/MiniMap.gd" id="14"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.04, 0.06, 0.08, 0.82)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.9, 1, 0.75)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 8
shadow_offset = Vector2(0, 0)
shadow_color = Color(0, 1, 1, 0.2)

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0
bg_color = Color(0.04, 0.08, 0.12, 0.86)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.18, 0.9, 1, 0.92)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 10
shadow_offset = Vector2(0, 0)
shadow_color = Color(0.2, 0.95, 1, 0.18)

[sub_resource type="SystemFont" id="3"]
font_names = PackedStringArray("Electrolize", "DSEG14 Classic", "DSEG7 Classic", "DS-Digital", "Digital-7", "LCD", "DejaVu Sans Mono")
antialiasing = 0
subpixel_positioning = 0

[node name="World" type="Node2D"]
script = ExtResource("1")

[node name="BlueprintGrid" type="Node2D" parent="."]
script = ExtResource("2")

[node name="ArenaBoundary" type="Node2D" parent="."]
script = ExtResource("13")

[node name="Player" parent="." instance=ExtResource("3")]

[node name="GameWorld" type="Node" parent="."]
script = ExtResource("5")
command_queue_path = NodePath("CommandQueue")
world_path = NodePath("..")
snapshot_interval = 0.2

[node name="CommandQueue" type="Node" parent="GameWorld"]
script = ExtResource("6")

[node name="HumanInputSource" type="Node" parent="GameWorld"]
script = ExtResource("7")
actor_id = "player"
command_queue_path = NodePath("../CommandQueue")
actor_path = NodePath("../../Player")

[node name="AgentInputSource" type="Node" parent="GameWorld"]
script = ExtResource("8")
actor_id = "player"
command_queue_path = NodePath("../CommandQueue")
agent_bridge_path = NodePath("../AgentBridge")

[node name="AgentBridge" type="Node" parent="GameWorld"]
script = ExtResource("9")

[node name="LocalAgentStub" type="Node" parent="GameWorld/AgentBridge"]
script = ExtResource("10")
enabled = false
actor_id = "player"
command_interval = 0.35
move_radius = 1.0
agent_bridge_path = NodePath("..")

[node name="NetworkAdapter" type="Node" parent="GameWorld"]
script = ExtResource("11")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="InfoPanel" type="PanelContainer" parent="HUD"]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -190.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = 72.0
theme_override_styles/panel = SubResource("1")

[node name="Body" type="VBoxContainer" parent="HUD/InfoPanel"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="HUD/InfoPanel/Body"]
horizontal_alignment = 2
text = "SYSTEM STATUS"
theme_override_colors/font_color = Color(0.6, 0.95, 1, 0.9)
theme_override_font_sizes/font_size = 10

[node name="Accent" type="ColorRect" parent="HUD/InfoPanel/Body"]
custom_minimum_size = Vector2(0, 2)
size_flags_horizontal = 3
color = Color(0.2, 0.9, 1, 0.7)

[node name="Info" type="Label" parent="HUD/InfoPanel/Body"]
horizontal_alignment = 2
text = "CREDITS: 0.0\nENEMIES: 0\n[R] RESTART"
theme_override_colors/font_color = Color(0.9, 0.96, 1, 0.9)
theme_override_font_sizes/font_size = 12

[node name="WeaponHUD" type="Control" parent="HUD"]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -300.0
offset_top = 166.0
offset_right = -12.0
offset_bottom = 344.0
script = ExtResource("4")

[node name="MiniMap" type="Control" parent="HUD"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 12.0
offset_top = 12.0
offset_right = 236.0
offset_bottom = 236.0
script = ExtResource("14")

[node name="LowHealthBanner" type="PanelContainer" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -298.0
offset_top = 118.0
offset_right = -12.0
offset_bottom = 162.0
pivot_offset = Vector2(143, 22)
theme_override_styles/panel = SubResource("2")
script = ExtResource("12")

[node name="Margin" type="MarginContainer" parent="HUD/LowHealthBanner"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="Message" type="Label" parent="HUD/LowHealthBanner/Margin"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
text = "LOW HEALTH"
theme_override_colors/font_color = Color(0.85, 0.98, 1, 1)
theme_override_colors/font_outline_color = Color(0.08, 0.22, 0.28, 0.95)
theme_override_constants/outline_size = 1
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 23
text_overrun_behavior = 3

[node name="GameOver" type="CanvasLayer" parent="."]
layer = 20
visible = false

[node name="Overlay" type="ColorRect" parent="GameOver"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 0.6)

[node name="Label" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -30.0
offset_right = 140.0
offset_bottom = 30.0
horizontal_alignment = 1
vertical_alignment = 1
text = "GAME OVER\nPress R to restart"

[node name="TimeSurvived" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = 18.0
offset_right = 140.0
offset_bottom = 46.0
horizontal_alignment = 1
vertical_alignment = 1
text = "Time Survived: 00:00:00"

[node name="Enemies" type="Node2D" parent="."]

[node name="BoostOrbs" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
